Amendments to Toast.htm;. Included image to, added description, amended page title.

--- a/Toast.html
+++ b/Toast.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toast Recipe</title>
 </head>
 <body>
     <h1>Toast Recipe</h1>
+    <br> 
+    <img src="./images/perfect-quick-easy-french-toast-hero-03-2a9485bbb12b4cf5abcfef53aa9accd9.jpg" width="1000" alt="Picture of Toast">   
+    <h2>About the Recipe</h2>
+    <p>Toast is a delicious and simple recipe, great for hangovers or a quick breakfast. 
+        Try topping with your favourite items such as <strong>Jam</strong> or <strong>Marmite</strong></p>
+    <br>
     <h2>Ingredients</h2>
     <ul>
         <li>Bread</li>
         <li>Butter or Spread of choice</li>
     </ul>
+    <br>
     <h2>Method</h2>
     <ol>
         <li>Open bread packet</li>
