Populated Content to Meatballs Recipe
Added image file, description, ingredients and method

--- a/Meatballs.html
+++ b/Meatballs.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meatballs Recipe</title>
 </head>
 <body>
     <h1>Meatballs Recipe</h1>
+    <img src="./images/PXL_20240429_200716693.PORTRAIT.jpg" width="1000" alt="Picture of Olie's Spicy Meatballs"
+    <br>
+    <h2>About the Recipe</h2>
+    <p>Meatballs are a classic Italian inspired dish, just like Nona used to make</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Ground Beef</li>
+        <li>Herbs</li>
+        <li>Egg</li>
+        <li>Seasoning</li>
+    </ul>
+    <h2>Method</h2>
+    <ol>
+        <li>Combine all the ingredients thoroughly in a bowl</li>
+        <li>Spread a tray with flour</li>
+        <li>Roll the mixture into small (<5cm) balls with your hands and coat evenly with the flour on the tray</li>
+        <li>Brown the meatballs in a hot pan with some oil, turning frequently</li>
+        <li>Add to a tomato based sauce of your choice to continue cooking</li>
+    </ol>
+
 </body>
 </html>
