Populated Index.html with Hyperlinks
Added an ordered list of the recipes with in the local file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index of Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <ol>
+        <li><a href="./Meatballs.html" rel="noopener noreferrer" target="_blank">Meatballs Recipe</a></li>
+        <li><a href="./Toast.html" rel="noopener noreferrer" target="_blank">Toast Recipe</a></li>
+    </ol>
 </body>
 </html>
