--- a/Meatballs.html
+++ b/Meatballs.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meatballs Recipe</title>
+    <!-- Added link to CSS -->
+    <link href="./styles.css" rel="stylesheet"
 </head>
 <body>
     <h1>Meatballs Recipe</h1>
-    <img src="./images/PXL_20240429_200716693.PORTRAIT.jpg" width="1000" alt="Picture of Olie's Spicy Meatballs"
+    <img id="mainimage" src="./images/PXL_20240429_200716693.PORTRAIT.jpg" alt="Picture of Olie's Spicy Meatballs"
     <br>
     <h2>About the Recipe</h2>
     <p>Meatballs are a classic Italian inspired dish, just like Nona used to make</p>
